Adding basic history view with some view and application logic to stop anyone other than editors seeing most of the content

--- a/app/assets/stylesheets/dashboard.css.scss
+++ b/app/assets/stylesheets/dashboard.css.scss
@@ -49,6 +49,92 @@
         text-decoration: underline;
         color: #54d1b8;
       }
+
+      &.left-align {
+        text-align: left;
+        padding: 50px 0px 10px 0px;
+      }
+    }
+
+    .authors {
+      font-family:      Roboto;
+      font-size:        18px;
+      font-weight:      400;
+    }
+
+    .timeline {
+      padding-top: 20px;
+
+      .event {
+        padding: 20px 30px;
+        background: #fff;
+        border-bottom: 1px solid #efefef;
+
+        .title {
+          font-family: Neuton;
+          color:       #192023;
+          margin-bottom: 0px;
+          font-size:   30px;/* Approximation due to font substitution */
+          font-weight: 400;
+          width:       800px;
+          white-space: nowrap;
+          overflow: hidden;
+          text-overflow: ellipsis;
+        }
+
+        .meta {
+          font-style: italic;
+          font-family: Roboto;
+          color:       #192023;
+          font-size:   15px;/* Approximation due to font substitution */
+
+          .completed {
+            background: lightgreen;
+            padding: 3px 5px;
+            border-radius:    2px;
+          }
+
+          .not-complete {
+            background: red;
+            padding: 3px 5px;
+            border-radius:    2px;
+          }
+
+          .in-progress {
+            background: orange;
+            padding: 3px 5px;
+            border-radius:    2px;
+          }
+        }
+
+        .action {
+          box-sizing:       border-box;
+          display:          inline-block;
+          float: right;
+          border-radius:    3px;
+          border:           2px solid transparent;
+          background:       #54d1b8;
+          height:           40px;
+          font-family:      Roboto;
+          color:            #fff;
+          font-size:        17px;/* Approximation due to font substitution */
+          font-weight:      400;
+          text-align:       center;
+          text-decoration:  none;
+          white-space:      nowrap;
+          margin-left:      4px;
+          padding:          8px 20px;
+          margin-top: 10px;
+
+          &.history {
+            background: #C0C0C0;
+
+            iron-icon {
+              margin: -5px 0px 0px 5px;
+            }
+          }
+        }
+      }
     }
 
     .flash {
@@ -94,16 +180,16 @@
       }
 
       .dashboard_paper {
-        padding: 30px;
+        padding: 20px 30px;
         background: #fff;
         border-bottom: 1px solid #efefef;
 
         .title {
           font-family: Neuton;
           color:       #192023;
+          margin-bottom: 0px;
           font-size:   30px;/* Approximation due to font substitution */
           font-weight: 400;
-          line-height: 30px;/* Approximation due to font substitution */
           width:       800px;
           white-space: nowrap;
           overflow: hidden;
@@ -115,6 +201,24 @@
           font-family: Roboto;
           color:       #192023;
           font-size:   15px;/* Approximation due to font substitution */
+
+          .completed {
+            background: lightgreen;
+            padding: 3px 5px;
+            border-radius:    2px;
+          }
+
+          .not-complete {
+            background: red;
+            padding: 3px 5px;
+            border-radius:    2px;
+          }
+
+          .in-progress {
+            background: orange;
+            padding: 3px 5px;
+            border-radius:    2px;
+          }
         }
 
         .action {
@@ -128,12 +232,17 @@
           font-family:      Roboto;
           color:            #fff;
           font-size:        17px;/* Approximation due to font substitution */
-          font-weight:      500;
+          font-weight:      400;
           text-align:       center;
           text-decoration:  none;
           white-space:      nowrap;
           margin-left:      4px;
           padding:          8px 20px;
+          margin-top: 10px;
+
+          &.history {
+            background: #C0C0C0;
+          }
         }
       }
     }
