--- a/app/views/papers/history.html.erb
+++ b/app/views/papers/history.html.erb
@@ -25,7 +25,7 @@
               <% if assignment.role == "reviewer" %>
                 <% if assignment.completed? %>
                   / <span class="completed">Review complete</span>
-                <% elsif !assignment.completed? && assignment.annotations.any? %>
+                <% elsif assignment.annotations.any? %>
                   / <span class="in-progress">Review started</span>
                 <% else %>
                   / <span class="not-complete">Review not started</span>
